[metadata]
name = json_db
version = attr: json_db.VERSION
description = Using JSON as very lightweight database
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = json, lightweight, database
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: System :: Filesystems

[options]
zip_safe = False
package_dir = {'': 'src'}
packages = find:
include_package_data = True
install_requires =
    json
    asyncio

[options.packages.find]
where = src
exclude =
    examples*
    scripts*
    docs*
    tests*
python_requires = >=3.6
